--- a/_includes/default.liquid
+++ b/_includes/default.liquid
@@ -1,5 +1,6 @@
 ---
-title: My Rad Blog
+title: Data Science Resources
+subtitle: What I've discovered from my growing interest in Data Science
 ---
 <!doctype html>
 <html lang="en">
